--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,3 @@
-<header class="w-full flex flex-row justify-center p-2 bg-slate-300" >
-  <h1>Gerenciador de Tarefas</h1>
+<header class="w-full flex flex-row justify-center p-2 bg-primary" >
+  <h1 class="text-base-100">Gerenciador de Tarefas</h1>
 </header>
